--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+div {
+  margin-right: -20px  ;
+  text-align: center;
+}
+
+button {
+  margin-right: 81px
+
+}
+h1 {
+  margin-right: 25mm
+}
